2009-07-26  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Tweak admin page to match WP 2.8 style.
	- (scorerender_get_num_of_images) Restore this func.
	- (scorerender_remove_cache) Simplify check.
	- (scorerender_admin_options) Fix typo causing javascript to not
	  included in admin page, strip redundant description.
	* wp-scorerender.php:
	- (transform_paths) Move to scorerender-utils.php.
	- Also define notation URLs and names.

2009-07-24  Abel Cheung  <abelcheung@gmail.com>

	* *.php: Version bump.
	* wp-scorerender.php:
	- (scorerender_get_def_settings) Avoid determining program path when
	  just requesting variable types. 

2009-07-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Drop dashboard widget, which is not very useful.
	- Only add javascript to ScoreRender option page but not others.

2009-05-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_get_def_settings):
	- Better auto-detection of binary locations.

2009-05-09  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_process_content):
	- Also show image dimension in output image tag.
	- Always use \r\n as line break when showing image code, otherwise
	  copy and paste can be problematic under Windows.
	* scorerender-class.php, wp-scorerender.php:
	- Completely remove transparency option, which is not optional now.

2009-05-07  Abel Cheung  <abelcheung@gmail.com>

	* scorerender*.php:
	- Update copyright and version.

	* scorerender-admin.php:
	- Drop transparency option in admin page.
	- Change admin page to match WordPress 2.7 style, and use jQuery.

=== ScoreRender 0.3.0 ===
2009-04-30  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, showcode.css:
	- Completely revamped to utilize Zero Clipboard by jhuckaby.
	  No more "mozilla not supported" thing.
	- Move to misc/ subfolder.

	* blank.gif, iepngfix.php:
	- Move to misc/ subfolder.

	* misc/ZeroClipbard.js, misc/ZeroClipboard.swf:
	- New files.
